--- a/css/style.css
+++ b/css/style.css
@@ -57,3 +57,31 @@ h1
     text-align: center;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
+
+/* LOADING PAGE - PIKACHU.HTML */
+#loader
+{
+    position: fixed;
+    top: 0;
+    left: 0;
+    background-color: rgb(28, 0, 54);
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+}
+
+#loader-content
+{
+    text-align: center;
+    color: aliceblue;
+    font-size: 4rem;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#content
+{
+    display: none;
+}
