--- a/css/style.css
+++ b/css/style.css
@@ -58,6 +58,12 @@ h1
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.poke-cont .card .name
+{
+    font-size: 1.25rem;
+    font-weight: bold;
+}
+
 /* LOADING PAGE - PIKACHU.HTML */
 #loader
 {
